explanation how to develop / deploy this web application